# python-tip-of-the-day

./: README.md  brython_modules.js  demo.html  index.html  pyproject.toml  tips.css  tips_data.tsv  tips_data.txt  tips_views.py
